--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -6,95 +6,108 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.CadastroActivity">
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/nick"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:hint="Nome do Usuario (Nick)" app:layout_constraintTop_toBottomOf="@+id/titulo_cadastro"
-            android:layout_marginTop="64dp"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/nome" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:hint="Nome Completo"
-            app:layout_constraintTop_toBottomOf="@+id/nick"
-            android:layout_marginTop="8dp"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/email_login" app:layout_constraintTop_toBottomOf="@+id/nome"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:hint="E-mail" android:layout_marginTop="8dp"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/senha_login" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/email_login" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:hint="Senha"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/confirmar_senha"
-            app:layout_constraintTop_toBottomOf="@+id/senha_login"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:hint="Confirmar Senha"
-            android:layout_marginTop="8dp"/>
-    <ImageView
-            android:layout_width="114dp"
-            android:layout_height="96dp" app:srcCompat="@drawable/coruja_icon"
-            android:id="@+id/imageView3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.101"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>
-    <TextView
-            android:text="  CADASTRO "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/titulo_cadastro"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="64dp"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.288"
-            android:textSize="30sp"
-            android:textColor="#111"/>
-    <Button
-            android:text="Salvar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/background_button_green"
-            android:textColor="#ffffff"
-            android:id="@+id/salvar_cadastro" android:layout_marginTop="52dp"
-            app:layout_constraintTop_toBottomOf="@+id/confirmar_senha" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/cancelar_cadastro"
-            app:layout_constraintHorizontal_bias="0.48" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" android:textAllCaps="true"/>
-    <Button
-            android:text="Cancelar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:textColor="#ffffff"
-            android:background="@drawable/backgound_button_red"
-            android:id="@+id/cancelar_cadastro" android:layout_marginTop="52dp"
-            app:layout_constraintTop_toBottomOf="@+id/confirmar_senha"
-            app:layout_constraintStart_toEndOf="@+id/salvar_cadastro" app:layout_constraintEnd_toEndOf="parent"
-            android:textAllCaps="true"/>
+   <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" tools:ignore="MissingConstraints">
+       <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent"
+                                                          android:layout_height="fill_parent">
+           <EditText
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:inputType="textPersonName"
+                   android:ems="10"
+                   android:id="@+id/nick"
+                   app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   android:hint="Nome do Usuario (Nick)" app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                   android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
+                   android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
+           <EditText
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:inputType="textPersonName"
+                   android:ems="10"
+                   android:id="@+id/nome" app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   android:hint="Nome Completo"
+                   app:layout_constraintTop_toBottomOf="@+id/nick"
+                   android:layout_marginTop="8dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
+                   android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
+           <EditText
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:inputType="textPersonName"
+                   android:ems="10"
+                   android:id="@+id/email_login" app:layout_constraintTop_toBottomOf="@+id/nome"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   app:layout_constraintStart_toStartOf="parent"
+                   android:hint="E-mail" android:layout_marginTop="8dp" android:layout_marginLeft="16dp"
+                   android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
+           <EditText
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:inputType="textPassword"
+                   android:ems="10"
+                   android:id="@+id/senha_login" android:layout_marginTop="8dp"
+                   app:layout_constraintTop_toBottomOf="@+id/email_login" app:layout_constraintEnd_toEndOf="parent"
+                   app:layout_constraintStart_toStartOf="parent"
+                   android:hint="Senha" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
+                   android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
+           <EditText
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:inputType="textPassword"
+                   android:ems="10"
+                   android:id="@+id/confirmar_senha"
+                   app:layout_constraintTop_toBottomOf="@+id/senha_login"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   app:layout_constraintStart_toStartOf="parent"
+                   android:hint="Confirmar Senha"
+                   android:layout_marginTop="8dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
+                   android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
+           <ImageView
+                   android:layout_width="114dp"
+                   android:layout_height="96dp" app:srcCompat="@drawable/coruja_icon"
+                   android:id="@+id/imageView3"
+                   app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.101"
+                   app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>
+           <TextView
+                   android:text="  CADASTRO "
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/titulo_cadastro"
+                   app:layout_constraintTop_toTopOf="@+id/imageView3"
+                   app:layout_constraintStart_toEndOf="@+id/imageView3"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   app:layout_constraintHorizontal_bias="0.3"
+                   android:textSize="30sp"
+                   android:textColor="#111" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+           />
+           <Button
+                   android:text="@string/salvar"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:background="@drawable/background_button_green"
+                   android:textColor="#ffffff"
+                   android:id="@+id/salvar_cadastro"
+                   app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintEnd_toStartOf="@+id/cancelar_cadastro"
+                   app:layout_constraintHorizontal_bias="0.48" android:layout_marginEnd="16dp"
+                   android:layout_marginRight="16dp" android:textAllCaps="true"
+                   android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="64dp"
+                   app:layout_constraintTop_toBottomOf="@+id/confirmar_senha"/>
+           <Button
+                   android:text="Cancelar"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:paddingStart="8dp"
+                   android:paddingEnd="8dp"
+                   android:textColor="#ffffff"
+                   android:background="@drawable/backgound_button_red"
+                   android:id="@+id/cancelar_cadastro"
+                   app:layout_constraintStart_toEndOf="@+id/salvar_cadastro" app:layout_constraintEnd_toEndOf="parent"
+                   android:textAllCaps="true" app:layout_constraintTop_toTopOf="@+id/salvar_cadastro"
+                   app:layout_constraintBottom_toBottomOf="@+id/salvar_cadastro" android:layout_marginLeft="16dp"
+                   android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
+       </androidx.constraintlayout.widget.ConstraintLayout>
+   </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
