--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,62 +6,72 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.MainActivity">
+    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" tools:ignore="MissingConstraints">
+        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent"
+                                                           android:layout_height="fill_parent">
+            <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/email"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:hint="E-mail"
+                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
+                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginRight="16dp"
+                    android:layout_marginEnd="16dp"/>
+            <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textWebPassword"
+                    android:ems="10"
+                    android:id="@+id/senha"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:hint="Senha"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/email" android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
+            <Button
+                    android:text="Entrar"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnLogin"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/senha"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="28dp" app:layout_constraintHorizontal_bias="0.498"
+                    android:textColorLink="#000000" android:textColorHighlight="#00EC1B1B" android:textColor="#fff"
+                    android:textColorHint="#00FFFFFF"
+                    android:background="@drawable/background_button_green" android:textStyle="bold"
+                    android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginRight="24dp"
+                    android:layout_marginEnd="24dp"/>
 
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/email"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:hint="E-mail"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textWebPassword"
-            android:ems="10"
-            android:id="@+id/senha"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:hint="Senha"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/email"/>
-    <Button
-            android:text="Entrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnLogin"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/senha"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="28dp" app:layout_constraintHorizontal_bias="0.498"
-            android:textColorLink="#000000" android:textColorHighlight="#00EC1B1B" android:textColor="#fff"
-            android:textColorHint="#00FFFFFF"
-            android:background="@drawable/background_button_green" android:textStyle="bold"/>
-
-    <Button
-            android:text="Cadastrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnCadastro" android:layout_marginTop="28dp"
-            android:background="@drawable/background_button_yellow"
-            android:textColor="#fff"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btnLogin" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textStyle="bold"/>
-    <ImageView
-            android:layout_width="147dp"
-            android:layout_height="115dp" app:srcCompat="@drawable/icone_logo"
-            android:id="@+id/imageView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+            <Button
+                    android:text="Cadastrar"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnCadastro" android:layout_marginTop="8dp"
+                    android:background="@drawable/background_button_yellow"
+                    android:textColor="#fff"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textStyle="bold" android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
+                    android:layout_marginRight="24dp" android:layout_marginEnd="24dp"/>
+            <ImageView
+                    android:layout_width="147dp"
+                    android:layout_height="115dp" app:srcCompat="@drawable/icone_logo"
+                    android:id="@+id/imageView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
